# NSRAM

./: .gitignore  README.md  pyproject.toml
chip/spice/: cell_a_floating_body.spice
docs/: email_to_sebastian.txt  mistral_application_answers.txt  novel_results_2026_03_26.md  nsram_sky130_chip_architecture.md  online_learning_research_plan.md
examples/: architecture_comparison.py  brain_arena.py  brain_plays_doom.py  brain_plays_pong.py  brain_video.py  bsim4_2t_floating_body.py  byte_online_learner.py  compare_stp.py  cortical_breakout.py  eprop_learning.py  fep_mem.py  fep_mem_rigorous.py  fep_mem_v2.py  hero_figure.py  large_scale_test.py  learning_benchmark.py  mnist_scaling.py  onchip_mnist.py  optimal_config.py  paper_figures.py  pimol.py  quickstart.py  scalable_learner.py  scaling_test.py  showcase_video.py  single_neuron.py  sole_experiment.py  tune_stp.py  vg2_sweep.py
nsram/: __init__.py  analysis.py  beam.py  benchmarks.py  bsim4.py  characterize.py  encoding.py  export.py  fitting.py  learning.py  network.py  neuron.py  neurons.py  onchip_learning.py  physics.py  reservoir.py  spice.py  vision.py
src/: bolt_bench  bolt_bench.c  bolt_gpu  bolt_gpu.hip  bolt_novel.h  origin  origin.c
tests/: test_nsram.py
